Included Text Messaging

--- a/Chagora/app/src/main/AndroidManifest.xml
+++ b/Chagora/app/src/main/AndroidManifest.xml
@@ -19,7 +19,9 @@
         <activity android:name=".CallActivity" />
         <activity android:name=".TextActivity" />
         <activity android:name=".NewCallActivity" />
-        <activity android:name=".NewMsgActivity"></activity>
+        <activity android:name=".NewMsgActivity" />
+        <activity android:name=".NewContactActivity" />
+        <activity android:name=".MsgViewActivity"></activity>
     </application>
 
 </manifest>
